# olympics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
olympics/: __main__.py  api.py  cli.py  db.py
tests/: test_api.py  test_cli.py  test_db.py  test_main.py
