[tool.setuptools]
packages = []

[project]
name = 'olympics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'rich',
  'fastapi[standard]',

  'pytest-cov'
]

[tool.pytest.ini_options]
addopts = "--cov=olympics --cov=tests --cov-report=term-missing"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
]

